Trying to fix i, ste overflow to hidden and also add onclick=void(0) to info modal

--- a/mangastyleapp/trending_tweets_app/static/trending_tweets_app/styles/header.css
+++ b/mangastyleapp/trending_tweets_app/static/trending_tweets_app/styles/header.css
@@ -37,10 +37,11 @@
     border-radius: 12px;
     border: 2px solid rgba(255, 255, 255, 0.4);
     color: rgba(255, 255, 255, 0.4);
-    font-size: 10px;
+    font-size: 12px;
     font-weight: 700;
     cursor: pointer;
     text-align: center;
+    overflow: hidden;
     transition: 0.15s;
 }
 
